// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> ref should work 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-radio c2 c3"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-Radio__control c2 c3"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c3"
      id="poodle-check-control-1"
      type="radio"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-radio__icon c2 c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-1.818 0a8.182 8.182 0 1 1-16.364 0 8.182 8.182 0 0 1 16.364 0zM12 17.454a5.454 5.454 0 1 0 0-10.908 5.454 5.454 0 0 0 0 10.909z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-1.818a8.182 8.182 0 1 0 0-16.364 8.182 8.182 0 0 0 0 16.364z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-radio__label c2 c3"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-radio__label c2 c3"
    >
      Hello world
    </span>
  </label>
</div>
`;

exports[`<Radio /> should render Box props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c3 {
  margin-top: 20px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-radio c2 c3"
  id="id"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-Radio__control c2 c7"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c7"
      id="poodle-check-control-1"
      type="radio"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-radio__icon c2 c7"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-1.818 0a8.182 8.182 0 1 1-16.364 0 8.182 8.182 0 0 1 16.364 0zM12 17.454a5.454 5.454 0 1 0 0-10.908 5.454 5.454 0 0 0 0 10.909z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-1.818a8.182 8.182 0 1 0 0-16.364 8.182 8.182 0 0 0 0 16.364z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-radio__label c2 c7"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-radio__label c2 c7"
    >
      Hello world
    </span>
  </label>
</div>
`;

exports[`<Radio /> should render Radio correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-radio c2 c3"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-Radio__control c2 c3"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c3"
      id="poodle-check-control-1"
      type="radio"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-radio__icon c2 c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-1.818 0a8.182 8.182 0 1 1-16.364 0 8.182 8.182 0 0 1 16.364 0zM12 17.454a5.454 5.454 0 1 0 0-10.908 5.454 5.454 0 0 0 0 10.909z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-1.818a8.182 8.182 0 1 0 0-16.364 8.182 8.182 0 0 0 0 16.364z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-radio__label c2 c3"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-radio__label c2 c3"
    >
      Hello world
    </span>
  </label>
</div>
`;

exports[`<Radio /> theming should disable classes 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c8 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c8~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c8:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c8:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c8:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c8:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c19 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-radio c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 poodle-Radio__control c5 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c8 c2"
      id="poodle-check-control-1"
      type="radio"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c11 poodle-radio__icon c5 c2"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-1.818 0a8.182 8.182 0 1 1-16.364 0 8.182 8.182 0 0 1 16.364 0zM12 17.454a5.454 5.454 0 1 0 0-10.908 5.454 5.454 0 0 0 0 10.909z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-1.818a8.182 8.182 0 1 0 0-16.364 8.182 8.182 0 0 0 0 16.364z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c15 poodle-radio__label c5 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c19 poodle-radio__label c5 c2"
    >
      Hello
    </span>
  </label>
</div>
`;

exports[`<Radio /> theming should extend styles in global 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c2 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-radio c2 c3"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-Radio__control c6 c3"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c3"
      id="poodle-check-control-1"
      type="radio"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-radio__icon c6 c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-1.818 0a8.182 8.182 0 1 1-16.364 0 8.182 8.182 0 0 1 16.364 0zM12 17.454a5.454 5.454 0 1 0 0-10.908 5.454 5.454 0 0 0 0 10.909z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-1.818a8.182 8.182 0 1 0 0-16.364 8.182 8.182 0 0 0 0 16.364z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-radio__label c6 c3"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-radio__label c6 c3"
    >
      hello
    </span>
  </label>
</div>
`;

exports[`<Radio /> theming should extend styles in local 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c2 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-radio c2 c3"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-Radio__control c6 c3"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c3"
      id="poodle-check-control-1"
      type="radio"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-radio__icon c6 c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-1.818 0a8.182 8.182 0 1 1-16.364 0 8.182 8.182 0 0 1 16.364 0zM12 17.454a5.454 5.454 0 1 0 0-10.908 5.454 5.454 0 0 0 0 10.909z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-1.818a8.182 8.182 0 1 0 0-16.364 8.182 8.182 0 0 0 0 16.364z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-radio__label c6 c3"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-radio__label c6 c3"
    >
      Hello
    </span>
  </label>
</div>
`;

exports[`<Radio /> theming should override classes 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c8 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c8~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c8:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c8:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c8:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c8:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c19 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-radio morning c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 poodle-Radio__control c5 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c8 c2"
      id="poodle-check-control-1"
      type="radio"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c11 poodle-radio__icon c5 c2"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-1.818 0a8.182 8.182 0 1 1-16.364 0 8.182 8.182 0 0 1 16.364 0zM12 17.454a5.454 5.454 0 1 0 0-10.908 5.454 5.454 0 0 0 0 10.909z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-1.818a8.182 8.182 0 1 0 0-16.364 8.182 8.182 0 0 0 0 16.364z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c15 poodle-radio__label c5 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c19 poodle-radio__label c5 c2"
    >
      Hello
    </span>
  </label>
</div>
`;

exports[`<Radio /> theming should override styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c2 {
  margin-top: 50px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-radio c2 c3"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-Radio__control c6 c3"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c3"
      id="poodle-check-control-1"
      type="radio"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-radio__icon c6 c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-1.818 0a8.182 8.182 0 1 1-16.364 0 8.182 8.182 0 0 1 16.364 0zM12 17.454a5.454 5.454 0 1 0 0-10.908 5.454 5.454 0 0 0 0 10.909z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-1.818a8.182 8.182 0 1 0 0-16.364 8.182 8.182 0 0 0 0 16.364z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-radio__label c6 c3"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-radio__label c6 c3"
    >
      Hello
    </span>
  </label>
</div>
`;

exports[`<Radio /> theming should render with default props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-radio c2 hello c3"
  id="id"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-Radio__control c2 c3"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c3"
      id="poodle-check-control-1"
      type="radio"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-radio__icon c2 c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-1.818 0a8.182 8.182 0 1 1-16.364 0 8.182 8.182 0 0 1 16.364 0zM12 17.454a5.454 5.454 0 1 0 0-10.908 5.454 5.454 0 0 0 0 10.909z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0-1.818a8.182 8.182 0 1 0 0-16.364 8.182 8.182 0 0 0 0 16.364z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-radio__label c2 c3"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-radio__label c2 c3"
    >
      Hello
    </span>
  </label>
</div>
`;
